fix ad overflow #2

--- a/src/components/Classes/styles/_ClassMenu.scss
+++ b/src/components/Classes/styles/_ClassMenu.scss
@@ -2,7 +2,6 @@
     padding: 0.5rem 1rem;
     display: flex;
     flex-direction: column;
-    margin-bottom: 3rem;
 
     .class-menu-item {
         font-size: 2.4rem;
